{
    "name": "XboxSupport",
    "maps": [
        {
            "name": "CharController",
            "id": "e3f03d1a-b506-4267-a199-ba7de4d66797",
            "actions": [
                {
                    "name": "RightJoyStick",
                    "type": "Value",
                    "id": "79c49b89-8ca2-4410-be5c-531b494244c7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftJoyStick",
                    "type": "Value",
                    "id": "508d593d-4baf-4d50-8b16-5e52ba29c1f4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RemoveDigit",
                    "type": "Button",
                    "id": "de46e426-2964-4e5f-8ba8-bca8e109aab7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "77067cc2-7022-4952-b2e9-538b48419eb4",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJoyStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f262781-0432-4847-9661-398182c991d0",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftJoyStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fe7c036-359c-4b07-a0b2-45435faa5bab",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveDigit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e885a69b-9fe3-4896-925a-81379a80c878",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveDigit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67a47ffc-a9e6-475b-831e-cfa64cf9ac7e",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveDigit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "611b68b5-ea2e-4dbe-8a5c-a8e5307664e1",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveDigit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}